# CoolDown

./: .gitignore  CMakeLists.txt  README.md  TODO
Client/: CMakeLists.txt
Client/src/: client.cc  main.cc
Tracker/: CMakeLists.txt
Tracker/include/: error_code.h  tracker_db_manager.h
Tracker/src/: error_code.cc  tracker.cc  tracker_db_manager.cc
client/: CMakeLists.txt
client/include/: chunk_selector.h  client.h  client_connection_handler.h  download_task.h  job.h  job_info.h  local_sock_manager.h  net_task_manager.h  upload_task.h  verification.h
client/src/: chunk_selector.cc  client.cc  client_connection_handler.cc  download_task.cc  job.cc  job_info.cc  local_sock_manager.cc  local_sock_manager.cpp  main.cc  net_task_manager.cc  upload_task.cc  verification.cc
confs/: Client.properties  Tracker.properties
include/: client_info.h  error_code.h  file_owner_info.h  netpack.h  payload_type.h  tracker.h  tracker_connection_handler.h  tracker_db_manager.h
proto/: client.proto  job_history.proto  netpack_header.pb.h  netpack_header.proto  torrent.proto  tracker.pb.cc  tracker.pb.h  tracker.proto
public/: CMakeLists.txt
public/client_proto/: CMakeLists.txt
public/error_code/: CMakeLists.txt
public/error_code/include/: error_code.h
public/job_history/: CMakeLists.txt
public/netpack/: CMakeLists.txt
public/netpack/include/: netpack.h
public/netpack/src/: netpack.cc
public/torrent/: CMakeLists.txt
public/tracker_proto/: CMakeLists.txt
src/: client_info.cc  netpack.cc  netpack.cpp  netpack_header.pb.cc  server.cc  tracker.cc  tracker_connection_handler.cc  tracker_db_manager.cc
tracker/: CMakeLists.txt
tracker/include/: file_owner_info.h  payload_type.h  tracker.h  tracker_connection_handler.h
tracker/src/: file_owner_info.cc  tracker.cc  tracker_connection_handler.cc  tracker_db_manager.cc
