cmake_minimum_required(VERSION 2.6)
PROJECT( CoolDown-Tracker )
SET(CMAKE_CXX_COMPILER "clang++") 
#SET( DIR_OUTPUT ${CMAKE_BINARY_DIR}/output )
#SET( CMAKE_BUILD_TYPE "release" )
#FILE(MAKE_DIRECTORY ${DIR_OUTPUT})
SET( BIN_NAME Tracker)
INCLUDE_DIRECTORIES( include )

#link proto files to include & src 
execute_process(COMMAND ln -Ff ${CMAKE_SOURCE_DIR}/proto/tracker.pb.h ${CMAKE_CURRENT_SOURCE_DIR}/include/tracker.pb.h)
execute_process(COMMAND ln -Ff ${CMAKE_SOURCE_DIR}/proto/tracker.pb.cc ${CMAKE_CURRENT_SOURCE_DIR}/src/tracker.pb.cc)

FIND_LIBRARY(POCO_FOUNDATION PocoFoundation)
FIND_LIBRARY(POCO_NET PocoNet)
FIND_LIBRARY(POCO_DATA PocoData)
FIND_LIBRARY(POCO_DATA_MYSQL PocoDataMySQL)
FIND_LIBRARY(POCO_UTIL PocoUtil)
FIND_LIBRARY(PTHREAD pthread)
FIND_LIBRARY(PROTOBUF protobuf)

AUX_SOURCE_DIRECTORY( src DIR_SRCS )
ADD_EXECUTABLE( ${BIN_NAME} ${DIR_SRCS} )
TARGET_LINK_LIBRARIES( ${BIN_NAME} ${POCO_FOUNDATION} ${POCO_NET} ${POCO_DATA}
    ${POCO_DATA_MYSQL} ${POCO_UTIL} ${PROTOBUF})
