cmake_minimum_required(VERSION 2.6)
PROJECT( CoolDown-Client )
SET( BIN_NAME Client )
GET_PROPERTY(ERROR_CODE_INCLUDE GLOBAL PROPERTY LIB_ERROR_CODE_INCLUDE)
GET_PROPERTY(NETPACK_INCLUDE GLOBAL PROPERTY LIB_NETPACK_INCLUDE)
GET_PROPERTY(TRACKER_PROTO_INCLUDE GLOBAL PROPERTY LIB_TRACKER_PROTO_INCLUDE)
GET_PROPERTY(PUBLIC_INCLUDE GLOBAL PROPERTY PUBLIC_INCLUDE )
INCLUDE_DIRECTORIES( include )
INCLUDE_DIRECTORIES( ${PUBLIC_INCLUDE} )
INCLUDE_DIRECTORIES( ${TRACKER_PROTO_INCLUDE} )
INCLUDE_DIRECTORIES( ${ERROR_CODE_INCLUDE} )
INCLUDE_DIRECTORIES( ${NETPACK_INCLUDE} )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/public/include )


FIND_LIBRARY(POCO_FOUNDATION PocoFoundation)
FIND_LIBRARY(POCO_NET PocoNet)
FIND_LIBRARY(POCO_DATA PocoData)
FIND_LIBRARY(POCO_DATA_MYSQL PocoDataMySQL)
FIND_LIBRARY(POCO_UTIL PocoUtil)
FIND_LIBRARY(PTHREAD pthread)
FIND_LIBRARY(PROTOBUF protobuf)
LINK_DIRECTORIES(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

GET_PROPERTY(NETPACK GLOBAL PROPERTY LIB_NETPACK_FULLNAME)
GET_PROPERTY(ERROR_CODE GLOBAL PROPERTY LIB_ERROR_CODE_FULLNAME)
GET_PROPERTY(TRACKER_PROTO GLOBAL PROPERTY LIB_TRACKER_PROTO_FULLNAME)

AUX_SOURCE_DIRECTORY( src DIR_SRCS )
ADD_EXECUTABLE( ${BIN_NAME} ${DIR_SRCS} )
TARGET_LINK_LIBRARIES( ${BIN_NAME} ${POCO_FOUNDATION} ${POCO_NET} ${POCO_DATA}
    ${POCO_DATA_MYSQL} ${POCO_UTIL} ${PROTOBUF} ${NETPACK} ${ERROR_CODE}
    ${TRACKER_PROTO})
