cmake_minimum_required(VERSION 2.6)
PROJECT( CoolDown-Public-error_code)
SET(CMAKE_CXX_COMPILER "clang++") 
SET( LIB_NAME "error_code" )
SET_PROPERTY(GLOBAL PROPERTY LIB_ERROR_CODE_FULLNAME ${CMAKE_SHARED_LIBRARY_PREFIX}${LIB_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX} )
SET_PROPERTY(GLOBAL PROPERTY LIB_ERROR_CODE_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES( include )

AUX_SOURCE_DIRECTORY( src DIR_SRCS )
ADD_LIBRARY( ${LIB_NAME} SHARED ${DIR_SRCS} )
