cmake_minimum_required(VERSION 2.6)
PROJECT( CoolDown-Public-JobHistory )
SET( LIB_NAME "job_history" )
SET_PROPERTY( GLOBAL PROPERTY LIB_JOB_HISTORY_FULLNAME ${CMAKE_SHARED_LIBRARY_PREFIX}${LIB_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
SET_PROPERTY( GLOBAL PROPERTY LIB_JOB_HISTORY_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include )

IF( NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/include )
    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include)
ENDIF()

IF( NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src )
    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
ENDIF()

INCLUDE_DIRECTORIES( include )
execute_process(COMMAND ln -Ff ${CMAKE_SOURCE_DIR}/proto/job_history.pb.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/job_history.pb.h)
execute_process(COMMAND ln -Ff ${CMAKE_SOURCE_DIR}/proto/job_history.pb.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/src/job_history.pb.cc)

FIND_LIBRARY(PROTOBUF protobuf)

AUX_SOURCE_DIRECTORY( src DIR_SRCS )
ADD_LIBRARY( ${LIB_NAME} SHARED ${DIR_SRCS} )
TARGET_LINK_LIBRARIES( ${LIB_NAME} ${PROTOBUF} )
