cmake_minimum_required(VERSION 2.6)
PROJECT( CoolDown-Public-JobHistory )
SET( LIB_NAME "job_history" )
SET_PROPERTY( GLOBAL PROPERTY LIB_JOB_HISTORY_FULLNAME ${CMAKE_SHARED_LIBRARY_PREFIX}${LIB_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
SET_PROPERTY( GLOBAL PROPERTY LIB_JOB_HISTORY_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include )

IF( NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/include )
    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include)
ENDIF()

IF( NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src )
    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
ENDIF()

INCLUDE_DIRECTORIES( include )
FILE(COPY ${CMAKE_SOURCE_DIR}/proto/job_history.pb.h DESTINATION
    ${CMAKE_CURRENT_SOURCE_DIR}/include)
FILE(COPY ${CMAKE_SOURCE_DIR}/proto/job_history.pb.cc DESTINATION
    ${CMAKE_CURRENT_SOURCE_DIR}/src)

FIND_PACKAGE(Protobuf REQUIRED)

AUX_SOURCE_DIRECTORY( src DIR_SRCS )
ADD_LIBRARY( ${LIB_NAME} SHARED ${DIR_SRCS} )
TARGET_LINK_LIBRARIES( ${LIB_NAME} ${PROTOBUF_LIBRARY} )
