cmake_minimum_required(VERSION 2.6)
PROJECT( CoolDown-Public-Netpack )
SET( LIB_NAME "netpack" )
SET_PROPERTY( GLOBAL PROPERTY LIB_NETPACK_FULLNAME ${CMAKE_SHARED_LIBRARY_PREFIX}${LIB_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
SET_PROPERTY( GLOBAL PROPERTY LIB_NETPACK_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include )
INCLUDE_DIRECTORIES( include )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/public/error_code/include )
FILE(COPY ${CMAKE_SOURCE_DIR}/proto/netpack_header.pb.h DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/include)

FILE(COPY ${CMAKE_SOURCE_DIR}/proto/netpack_header.pb.cc DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/src)

FIND_LIBRARY(POCO_FOUNDATION PocoFoundation)
FIND_LIBRARY(POCO_NET PocoNet)
FIND_LIBRARY(POCO_UTIL PocoUtil)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES( ${PROTOBUF_INCLUDE_DIRS} )

AUX_SOURCE_DIRECTORY( src DIR_SRCS )
ADD_LIBRARY( ${LIB_NAME} ${DIR_SRCS} )
TARGET_LINK_LIBRARIES( ${LIB_NAME} ${POCO_FOUNDATION} ${POCO_NET} ${POCO_UTIL}
    ${PROTOBUF_LIBRARY} )
