cmake_minimum_required(VERSION 2.6)
PROJECT( CoolDown-Public-Torrent )
SET( LIB_NAME "torrent" )
SET_PROPERTY( GLOBAL PROPERTY LIB_TORRENT_FULLNAME ${CMAKE_SHARED_LIBRARY_PREFIX}${LIB_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
SET_PROPERTY( GLOBAL PROPERTY LIB_TORRENT_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include )

IF( NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/include )
    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include)
ENDIF()

IF( NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src )
    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
ENDIF()

INCLUDE_DIRECTORIES( include )
execute_process(COMMAND ln -Ff ${CMAKE_SOURCE_DIR}/proto/torrent.pb.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/torrent.pb.h)
execute_process(COMMAND ln -Ff ${CMAKE_SOURCE_DIR}/proto/torrent.pb.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/src/torrent.pb.cc)

FIND_LIBRARY(PROTOBUF protobuf)

AUX_SOURCE_DIRECTORY( src DIR_SRCS )
ADD_LIBRARY( ${LIB_NAME} SHARED ${DIR_SRCS} )
TARGET_LINK_LIBRARIES( ${LIB_NAME} ${PROTOBUF} )
