cmake_minimum_required(VERSION 2.6)
PROJECT( CoolDown-Public-TrackerProto )
SET( LIB_NAME "tracker_proto" )
SET_PROPERTY( GLOBAL PROPERTY LIB_TRACKER_PROTO_FULLNAME ${CMAKE_SHARED_LIBRARY_PREFIX}${LIB_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
SET_PROPERTY( GLOBAL PROPERTY LIB_TRACKER_PROTO_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include )

IF( NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/include )
    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include)
ENDIF()

IF( NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src )
    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
ENDIF()

INCLUDE_DIRECTORIES( include )
FILE(COPY ${CMAKE_SOURCE_DIR}/proto/tracker.pb.h DESTINATION
    ${CMAKE_CURRENT_SOURCE_DIR}/include)
FILE(COPY ${CMAKE_SOURCE_DIR}/proto/tracker.pb.cc DESTINATION
    ${CMAKE_CURRENT_SOURCE_DIR}/src)

FIND_LIBRARY(POCO_FOUNDATION PocoFoundation)
FIND_LIBRARY(POCO_NET PocoNet)
FIND_LIBRARY(POCO_UTIL PocoUtil)
FIND_PACKAGE(Protobuf REQUIRED)

AUX_SOURCE_DIRECTORY( src DIR_SRCS )
ADD_LIBRARY( ${LIB_NAME} SHARED ${DIR_SRCS} )
TARGET_LINK_LIBRARIES( ${LIB_NAME} ${POCO_FOUNDATION} ${POCO_NET} ${POCO_UTIL}
    ${PROTOBUF_LIBRARY} )
